<resources>
    <string name="app_name">JobSharing</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcom back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="student_id">Student ID</string>
    <string name="kma_social_media">KMA SOCIAL MEDIA</string>
    <string name="recent_conversations">Recent Conversations</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="post">Post</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enter_email_or_student_id">Enter email or student ID</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="do_you_have_any_account">Do you have any account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_link_reset_password">Send link reset password</string>
    <string name="back_to">Back to</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="description">Description</string>
    <string name="link">Link</string>
    <string name="change_your_avatar">Change your avatar</string>
    <string name="username">Username</string>
    <string name="edit_your_private_details">Edit your private details</string>
    <string name="change_you_bio">Change you bio</string>
    <string name="add_website">Add website</string>
    <string name="your_private_details">Your private details</string>
    <string name="private_details">Private Details</string>
    <string name="phone">Phone</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="job_sharing">JOB SHARING</string>
    <string name="no_comment">No comment</string>
    <string name="no_newsfeed">No Newsfeed</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="add_follow">+ Follow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_title">Job title*</string>
    <string name="company">Company*</string>
    <string name="workplace_type">Workplace type*</string>
    <string name="job_location">Job Location*</string>
    <string name="job_type">Job type*</string>
    <string name="post_description">Description*</string>
    <string name="add_description">Add description</string>
    <string name="chose_the_workplace_type">Chose the workplace type</string>
    <string name="on_site">On-site</string>
    <string name="work_in_person">Employees come to work in-person.</string>
    <string name="hybrid">Hybrid</string>
    <string name="employees_work_on_site_and_off_site">Employees work on-site and off-site</string>
    <string name="employees_work_off_side">Employees work off-side</string>
    <string name="remote">Remote</string>
    <string name="add_location">Add location</string>
    <string name="add_job_type">Add job type</string>
    <string name="add_company">Add company</string>
    <string name="add_job_position">Add job position</string>
    <string name="please_fill">Please fill in all the information</string>
    <string name="posted_successfully">Posted successfully</string>
    <string name="job_description">Job Description</string>
    <string name="meet_the_hiring_team">Meet the hiring team</string>
    <string name="contact">Contact</string>
    <string name="connect">Connect</string>
    <string name="message">Message</string>
    <string name="job">Job</string>
    <string name="show_all_post">Show all post</string>
    <string name="follow">Follow</string>
    <string name="group_image">Group Image</string>
    <string name="employees">Employees</string>
    <string name="add_number_of_employee">Add number of employee</string>
    <string name="number_employees">Number Employees*</string>
    <string name="none_experience">None Experience</string>
    <string name="choose_the_experience_requirement">Choose the experience requirement</string>
    <string name="under_1_year_experience">Under 1 year experience</string>
    <string name="than_1_year_experience">Than 1 year experience</string>
    <string name="than_2_year_experience">Than 2 year experience</string>
    <string name="persons">persons</string>
    <string name="all_post_of_group">All post of Group</string>
    <string name="date_created">Date created:</string>
    <string name="members">members</string>
    <string name="join">JOIN</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove">Remove</string>
    <string name="txt_continue">Continue</string>
    <string name="format_comments"> %s comments</string>
    <string name="new_message">New message</string>
    <string name="do_you_want_to_stop">Do you want to stop?</string>
    <string name="do_you_want_to_stop_change">Do you want to stop change?</string>
    <string name="do_you_want_to_remove">Do you want to remove this post?</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="ago">ago</string>
    <string name="liked_by">Liked by</string>
    <string name="and">and</string>
    <string name="others">others</string>
    <string name="leave">Leave</string>

</resources>