<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialog.ExperienceDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingTop="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/_16sdp"
        android:background="@drawable/background_dialog_bottom"
        android:text="@string/hello_blank_fragment" >
        <TextView
            android:id="@+id/experienceDlg_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_experience_requirement"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <LinearLayout
            android:id="@+id/experienceDlg_llNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/experienceDlg_tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/none_experience"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/experienceDlg_cbNone"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"
                android:button="@drawable/bg_checkbox_language"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/experienceDlg_llUnderOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/experienceDlg_llNone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/under_1_year_experience"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/experienceDlg_cbUnderOne"
                android:layout_width="@dimen/_16sdp"
                android:button="@drawable/bg_checkbox_language"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/experienceDlg_llThanOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/experienceDlg_llUnderOne"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/than_1_year_experience"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/experienceDlg_cbThanOne"
                android:layout_width="@dimen/_16sdp"
                android:button="@drawable/bg_checkbox_language"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/experienceDlg_llThanTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/experienceDlg_llThanOne"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/than_2_year_experience"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/experienceDlg_cbThanTwo"
                android:layout_width="@dimen/_16sdp"
                android:button="@drawable/bg_checkbox_language"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>