<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.EditProfileActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp"
        app:tint="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageDone"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/private_details"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageDone"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/textChangeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/your_private_details"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/viewSupporter1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/textChangeAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter1"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/textTitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/textTitleName"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textTitleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of birth"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/textTitleDescription"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Add email"
            android:layout_marginEnd="@dimen/_8sdp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/textTitleName"
            app:layout_constraintBottom_toBottomOf="@id/textTitleName"
            app:layout_constraintStart_toStartOf="@id/textChangeAvatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Add phone number"
            android:layout_marginEnd="@dimen/_8sdp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/textTitleDescription"
            app:layout_constraintBottom_toBottomOf="@id/textTitleDescription"
            app:layout_constraintStart_toStartOf="@id/textChangeAvatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:layout_marginEnd="@dimen/_8sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/textTitleLink"
            app:layout_constraintBottom_toBottomOf="@id/textTitleLink"
            app:layout_constraintStart_toStartOf="@id/textChangeAvatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/viewSupporter2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/textTitleLink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>







    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>